// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Music renders album input disabled when clearAlbum is true 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="artist"
    >
      Artist
    </label>
    <input
      class="form-control"
      disabled=""
      id="artist"
      name="artist"
      placeholder="Sir Mix-a-Lot"
      type="text"
      value="foo"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearArtist"
          name="clearArtist"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearArtist"
          title=""
        >
          Clear artist
        </label>
      </div>
    </div>
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="album"
    >
      Album
    </label>
    <input
      class="form-control"
      disabled=""
      id="album"
      name="album"
      placeholder="Mack Daddy"
      type="text"
      value="bar"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearAlbum"
          name="clearAlbum"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAlbum"
          title=""
        >
          Clear album
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Music renders album input enabled when clearAlbum is false 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="artist"
    >
      Artist
    </label>
    <input
      class="form-control"
      disabled=""
      id="artist"
      name="artist"
      placeholder="Sir Mix-a-Lot"
      type="text"
      value="foo"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearArtist"
          name="clearArtist"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearArtist"
          title=""
        >
          Clear artist
        </label>
      </div>
    </div>
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="album"
    >
      Album
    </label>
    <input
      class="form-control"
      id="album"
      name="album"
      placeholder="Mack Daddy"
      type="text"
      value="bar"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearAlbum"
          name="clearAlbum"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAlbum"
          title=""
        >
          Clear album
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Music renders artist input disabled when clearArtist is true 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="artist"
    >
      Artist
    </label>
    <input
      class="form-control"
      disabled=""
      id="artist"
      name="artist"
      placeholder="Sir Mix-a-Lot"
      type="text"
      value="foo"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearArtist"
          name="clearArtist"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearArtist"
          title=""
        >
          Clear artist
        </label>
      </div>
    </div>
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="album"
    >
      Album
    </label>
    <input
      class="form-control"
      id="album"
      name="album"
      placeholder="Mack Daddy"
      type="text"
      value="bar"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearAlbum"
          name="clearAlbum"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAlbum"
          title=""
        >
          Clear album
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Music renders artist input enabled when clearArtist is false 1`] = `
<div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="artist"
    >
      Artist
    </label>
    <input
      class="form-control"
      id="artist"
      name="artist"
      placeholder="Sir Mix-a-Lot"
      type="text"
      value="foo"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearArtist"
          name="clearArtist"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearArtist"
          title=""
        >
          Clear artist
        </label>
      </div>
    </div>
  </div>
  <div
    class="mb-3"
  >
    <label
      class="form-label"
      for="album"
    >
      Album
    </label>
    <input
      class="form-control"
      id="album"
      name="album"
      placeholder="Mack Daddy"
      type="text"
      value="bar"
    />
    <div
      class="ms-1 mt-1 mb-3"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearAlbum"
          name="clearAlbum"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAlbum"
          title=""
        >
          Clear album
        </label>
      </div>
    </div>
  </div>
</div>
`;
